fix: responsivity improved for modal on small phones

--- a/src/components/modal.sass
+++ b/src/components/modal.sass
@@ -101,3 +101,7 @@
         width: 100%
         flex-wrap: wrap
         gap: 1rem
+        @media screen and (max-width: 440px)
+            font-size: 14px
+            width: 100%
+            margin-top: 1rem
